# libgpg-error

./: .gitignore  CMakeLists.txt
cmake/: config.h  libgpg-error-config.cmake  libgpg-error.def  version.h
src/: estream-printf.c  estream.c  gettext.h  gpg-error.h  gpgrt-int.h  logging.c  mkheader.c  mkstrtable.awk  sysutils.c  visibility.c  w32-add.h  w32-estream.c  w32-gettext.c
